EBT-159 alignment issue fix

--- a/WEB_THEMES.war/ECOMMERCE_STD_TEMPLATE_V2/scss/unilogWebLayouts.scss
+++ b/WEB_THEMES.war/ECOMMERCE_STD_TEMPLATE_V2/scss/unilogWebLayouts.scss
@@ -1127,6 +1127,7 @@ footer {
     position: absolute;
     width: 250px;
     top: 25px;
+	right: 0;
     font-size: 14px;
     color: #fff !important;
     z-index: 10;
